tests/modules-corpus/corpus/accept/sharing_trivial.pdx
// Issue #247: elaborator — sharing constraint checker
// AC test: trivial sharing constraint satisfaction

structure {
  module M = structure {
    type t = int
  }
  module N = structure {
    type t = int
  }
}
