tests/modules-corpus/corpus/reject/sharing_unknown_left.pdx
// Issue #247: elaborator — sharing constraint checker
// AC test: left path unresolved in sharing constraint

structure {
  module M = structure {
  }
  module N = structure {
    type t = int
  }
}
